# eve_tech_test

./: .gitignore  ADR.md  ARCHITECTURE_P1.md  README.md  dummy_policies.json  dummy_whitelisted_resources.json  pyproject.toml
src/: config.py  main.py
src/api/v1/: router.py
src/api/v1/endpoints/: policy.py  policy_validation.py  whitelisted_resources.py
src/core/: llm_policy_validator_service.py
src/core/policy_validator/: either.py  llm_policy_validator_service.py  low_confidense_score_handler.py  orchestrator.py  pii_validator_service.py  policy_coherence_validator_service.py  prompt_injection_validator_service.py  secrets_validator_service.py  validator_base.py  whitelisted_policy_validator_service.py
src/core/prompts/: base.py
src/repository/: policy_repository.py  whitelisted_resources_repository.py
src/schemas/: policy_context.py
