[project]
name = "jamv_llm_policy_validator"
version = "0.1.0-dev"
description = ""
authors = [
    {name = "jamoralesv"}
]
license = {text = "MIT"}
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "transformers (>=5.8.1,<6.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{ include = "src"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.19,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

